# cookidoo-recipes

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
.memsearch/memory/: 2026-06-24.md
docs/superpowers/plans/: 2026-06-15-cookidoo-recipes-plan.md  2026-06-15-cookidoo-tm7-plan.md  2026-06-16-public-repo-plan.md
docs/superpowers/specs/: 2026-06-15-cookidoo-tm7-design.md  2026-06-16-public-repo-design.md
plugins/cookidoo-recipes/: .mcp.json  LICENSE  README.md  SECURITY.md  pyproject.toml
plugins/cookidoo-recipes/.claude-plugin/: plugin.json
plugins/cookidoo-recipes/.codex-plugin/: plugin.json
plugins/cookidoo-recipes/commands/: cookidoo-login.md
plugins/cookidoo-recipes/scripts/: cookidoo-mcp  live_e2e.py
plugins/cookidoo-recipes/skills/cookidoo-recipes/: SKILL.md
plugins/cookidoo-recipes/src/cookidoo_mcp/: __init__.py  cli.py  client.py  models.py  server.py  sites.py
plugins/cookidoo-recipes/tests/: test_client.py  test_server_tools.py
scripts/: cookidoo-login  cookidoo-mcp  live_e2e.py
skills/cookidoo-recipes/: SKILL.md
skills/cookidoo-tm7/: SKILL.md
src/cookidoo_mcp/: __init__.py  auth.py  cli.py  client.py  config.py  http.py  models.py  server.py
tests/: test_auth.py  test_cli.py  test_client.py  test_config.py  test_models.py  test_rich_steps.py  test_server_tools.py  test_sites.py
